--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -9,9 +9,9 @@ body, p {
   font-family: 'Roboto Condensed', "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-p.fira {
+.fira {
   font-weight: 100;
-  font-size: 1rem;
+  font-size: 1.4rem;
   font-stretch: normal;
   font-family: 'Fira Code', monospace;
 }
